--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "FIFA_TEAMS",
   "description": "FIFA TEAMS APP For Angular Routing",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.3.x"
+    "node": "8.9.1"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "dependencies": {
     "express" : "4.1.1",
